# GameBoy_Emulator

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: CMakeLists.txt  main.c
src/emulator/: apu.c  apu.h  bootrom.h  cartridge.c  cartridge.h  cpu.c  cpu.h  gb.h  input.c  input.h  interrupt.c  interrupt.h  memory.c  memory.h  ppu.c  ppu.h  timer.c  timer.h
src/emulator/tools/: opcodes.py
src/platform/: debug.h  platform.h  sdl_debug.c  sdl_platform.c
src/platform/sdl/: sdl_platform.c
